final changes for scheduler