@@ -2,17 +2,11 @@ package com.fhir.scheduler.job;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.util.List;
-import java.util.Map;
+
 import com.fhir.scheduler.entity.Available_jobs;
 import com.fhir.scheduler.repo.Jobs_repo;
 import com.fhir.scheduler.util.JobResponseCode;
-import org.quartz.InterruptableJob;
-import org.quartz.JobDataMap;
-import org.quartz.JobExecutionContext;
-import org.quartz.JobExecutionException;
-import org.quartz.JobKey;
-import org.quartz.UnableToInterruptJobException;
+import org.quartz.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.quartz.QuartzJobBean;
@@ -22,7 +16,7 @@ import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
-
+@DisallowConcurrentExecution
 public class CronJob extends QuartzJobBean implements InterruptableJob{
 
 	JobExecutionContext jobExecutionContext_;
@@ -130,7 +124,7 @@ public class CronJob extends QuartzJobBean implements InterruptableJob{
 
 
 			myClass = classLoader.loadClass(job.getClass_path());
-			instance = myClass.newInstance();
+			instance = myClass.getConstructor().newInstance();
 
 			Method method = myClass.getMethod(job.getStart_method(), new Class[]{String.class});
 
@@ -170,7 +164,7 @@ public class CronJob extends QuartzJobBean implements InterruptableJob{
 		try {
 			job = repo.findAvailable_jobsByJob_name(jobName);
 			myClass = classLoader.loadClass(job.getClass_path());
-			instance = myClass.newInstance();
+			instance = myClass.getConstructor().newInstance();
 
 			Method method = myClass.getMethod(job.getStart_method());
 
